--- a/scatStyle.css
+++ b/scatStyle.css
@@ -2,8 +2,18 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #531;
+    font-family: "Indie Flower";
+    font-weight: bold;
+    font-size: 1.5rem;
 }
 
-.container div {
-    align-items: center;
+.container {
+    background-color: white;
+    padding: 3rem;    
+    border-radius: 1rem;
+}
+
+.image {
+    width: 100%;
 }
